Fix alien laser firing process